# ros2_gym_ignition

./: .gitignore  README.md
trained_params/: actor_architecture_cartpole.pth  actor_distribution_cartpole.pth  critic_cartpole.pth
workspace/gym_ignition/: CMakeLists.txt  package.xml
workspace/gym_ignition/config/anymal/: cfg.yaml
workspace/gym_ignition/config/cartpole/: cfg.yaml
workspace/gym_ignition/config/cassie/: cfg.yaml
workspace/gym_ignition/config/digit/: cfg.yaml
workspace/gym_ignition/config/spot/: cfg.yaml
workspace/gym_ignition/docker/: Dockerfile  entrypoint.bash  run.bash
workspace/gym_ignition/env-hooks/: gym_ignition.dsv.in
workspace/gym_ignition/gym_ignition/: GymIgnitionVecEnv.py  __init__.py
workspace/gym_ignition/gym_ignition/algo/dagger/: dagger.py
workspace/gym_ignition/gym_ignition/algo/ddpg/: OUNoise.py  agent.py  ddpg.py  module.py  storage.py
workspace/gym_ignition/gym_ignition/algo/ppo/: __init__.py  cnn.py  module.py  ppo.py  ppo_cnn.py  ppo_lfd.py  ppo_tcn.py  storage.py
workspace/gym_ignition/gym_ignition/algo/sac/: agent.py  module.py  sac.py
workspace/gym_ignition/gym_ignition/algo/tcn/: tcn.py
workspace/gym_ignition/gym_ignition/algo/td3/: TD3.py  utils.py
workspace/gym_ignition/gym_ignition/helper/: helpers.py  ssim.py
workspace/gym_ignition/include/gym_ignition/: Camera.hpp  GymIgnitionEnv.hpp  Kinematics.hpp  Model.hpp  Reward.hpp  RobotCamera.hpp  World.hpp
workspace/gym_ignition/include/gym_ignition/anymal/: Environment.hpp
workspace/gym_ignition/include/gym_ignition/cartpole/: Environment.hpp
workspace/gym_ignition/include/gym_ignition/cassie/: Environment.hpp
workspace/gym_ignition/include/gym_ignition/digit/: Environment.hpp
workspace/gym_ignition/include/gym_ignition/spot/: Environment.hpp
workspace/gym_ignition/launch/: gym_ignition.launch.py
workspace/gym_ignition/msg/: Depth.msg  Rgb.msg  Thermal.msg
workspace/gym_ignition/scripts/: cartpole.py
workspace/gym_ignition/src/: debug.cpp  gym_ignition.cpp
workspace/gym_ignition/srv/: Extra.srv  Info.srv  Observe.srv  Step.srv
workspace/gym_ignition_description/: CMakeLists.txt  package.xml
workspace/gym_ignition_description/env-hooks/: gym_ignition_description.dsv.in
workspace/gym_ignition_description/gym_ignition_models/anymal/: anymal.urdf  model.config
workspace/gym_ignition_description/gym_ignition_models/azure_kinect/: azure_kinect.urdf  model.config
workspace/gym_ignition_description/gym_ignition_models/cassie/: cassie.urdf  cassie.xacro  cassie_with_base.urdf  cassie_with_base.xacro  cassie_with_torso.urdf  cassie_with_torso.xacro  model.config  torso.urdf
workspace/gym_ignition_description/gym_ignition_models/digit/: digit.urdf  model.config
workspace/gym_ignition_description/gym_ignition_models/kinect/: kinect.xacro  model.config
workspace/gym_ignition_description/gym_ignition_models/kinect/meshes/visual/: kinect.dae
workspace/gym_ignition_description/gym_ignition_models/panda/: panda.urdf
workspace/gym_ignition_description/gym_ignition_models/panda_with_sparkplug/: model.config  panda.urdf
workspace/gym_ignition_description/gym_ignition_models/panda_with_sparkplug_and_kinect/: model.config  panda.xacro
workspace/gym_ignition_description/gym_ignition_models/spark_plug/: model.config  spark_plug.urdf
workspace/gym_ignition_description/gym_ignition_models/spark_plug/meshes/: spark_plug_collision.stl
workspace/gym_ignition_description/gym_ignition_models/spark_plug_socket/: model.config  spark_plug_socket.urdf
workspace/gym_ignition_description/gym_ignition_models/spark_plug_socket/meshes/: spark_plug_socket.stl  spark_plug_socket_collision.stl
workspace/gym_ignition_description/gym_ignition_models/sparkplug/: sparkplug.urdf
workspace/gym_ignition_description/gym_ignition_models/sparkplug_socket/: sparkplug_socket.urdf
workspace/gym_ignition_description/gym_ignition_models/sparkplug_socket/meshes/collision/: sparkplug_socket_bottom.stl  sparkplug_socket_inner.stl  sparkplug_socket_outer.stl
workspace/gym_ignition_description/gym_ignition_models/spot/: model.config  spot.urdf  spot.urdf.xacro  spot.xacro  spot_leg.urdf.xacro  spot_leg.xacro
workspace/gym_ignition_description/worlds/: empty.world
workspace/scenario/: CMakeLists.txt
workspace/scenario/cmake/FindPython/: Support.cmake
