<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gym_ignition</name>
  <version>0.0.0</version>
  <description>Ignition Gym environment</description>
  <maintainer email="npalomo@student.ethz.ch">nicholas</maintainer>
  <license>GNU</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- For building custom service and message files -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
